Prepearing is done

--- a/prepros.config
+++ b/prepros.config
@@ -91,18 +91,13 @@
       "history": [
         {
           "file": "index.html",
-          "mtimeMs": 1596966544437.2117,
-          "date": "2020-08-09T09:49:39.994Z"
+          "mtimeMs": 1597040240935.1685,
+          "date": "2020-08-10T06:19:31.217Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1596966576151.039,
-          "date": "2020-08-09T09:49:40.595Z"
-        },
-        {
-          "file": "fonts/GilroyBlack.css",
-          "mtimeMs": 1596947840000,
-          "date": "2020-08-09T09:47:30.991Z"
+          "mtimeMs": 1597040233825.8198,
+          "date": "2020-08-10T06:19:31.625Z"
         },
         {
           "file": "fonts/GilroyBlack.eot",
@@ -128,11 +123,6 @@
           "file": "fonts/GilroyBlack.woff2",
           "mtimeMs": 1596947840000,
           "date": "2020-08-09T09:47:36.043Z"
-        },
-        {
-          "file": "fonts/GilroyBold.css",
-          "mtimeMs": 1596947876000,
-          "date": "2020-08-09T09:47:36.620Z"
         },
         {
           "file": "fonts/GilroyBold.eot",
@@ -186,68 +176,63 @@
         },
         {
           "file": "img/backs/about-bg.png",
-          "mtimeMs": 1596965138931.0535,
-          "date": "2020-08-09T09:47:46.485Z"
+          "mtimeMs": 1597040283742.7686,
+          "date": "2020-08-10T06:19:32.881Z"
         },
         {
           "file": "img/backs/footer.png",
-          "mtimeMs": 1596965749532.1936,
-          "date": "2020-08-09T09:47:47.343Z"
+          "mtimeMs": 1597040286853.4077,
+          "date": "2020-08-10T06:19:33.262Z"
         },
         {
           "file": "img/backs/for-bg.png",
-          "mtimeMs": 1596965028407.546,
-          "date": "2020-08-09T09:47:49.136Z"
+          "mtimeMs": 1597040290132.7678,
+          "date": "2020-08-10T06:19:33.696Z"
         },
         {
           "file": "img/backs/for.png",
-          "mtimeMs": 1596965021774.6821,
-          "date": "2020-08-09T09:47:49.919Z"
+          "mtimeMs": 1597040291982.3538,
+          "date": "2020-08-10T06:19:34.040Z"
         },
         {
           "file": "img/backs/main.png",
-          "mtimeMs": 1596964911407.938,
-          "date": "2020-08-09T09:47:51.081Z"
+          "mtimeMs": 1597040296731.0862,
+          "date": "2020-08-10T06:19:34.471Z"
         },
         {
           "file": "img/backs/modal-bg.png",
-          "mtimeMs": 1596965253600.369,
-          "date": "2020-08-09T09:47:51.970Z"
+          "mtimeMs": 1597040298524.3904,
+          "date": "2020-08-10T06:19:34.865Z"
         },
         {
           "file": "img/icons/about-1.png",
-          "mtimeMs": 1596965112996.3132,
-          "date": "2020-08-09T09:47:52.877Z"
+          "mtimeMs": 1597040302731.2285,
+          "date": "2020-08-10T06:19:35.196Z"
         },
         {
           "file": "img/icons/about-2.png",
-          "mtimeMs": 1596965122206.1228,
-          "date": "2020-08-09T09:47:53.674Z"
+          "mtimeMs": 1597040305627.1382,
+          "date": "2020-08-10T06:19:35.528Z"
         },
         {
           "file": "img/icons/calendar.png",
-          "mtimeMs": 1596965023515.0564,
-          "date": "2020-08-09T09:47:54.281Z"
+          "mtimeMs": 1597040308791.3752,
+          "date": "2020-08-10T06:19:35.871Z"
         },
         {
           "file": "img/icons/envelope.png",
-          "mtimeMs": 1596965024192.1106,
-          "date": "2020-08-09T09:47:54.888Z"
+          "mtimeMs": 1597040311163.2715,
+          "date": "2020-08-10T06:19:36.198Z"
         },
         {
           "file": "img/icons/gps.png",
-          "mtimeMs": 1596965745543.39,
-          "date": "2020-08-09T09:47:55.503Z"
+          "mtimeMs": 1597040314615.8354,
+          "date": "2020-08-10T06:19:36.518Z"
         },
         {
           "file": "img/icons/tube.png",
-          "mtimeMs": 1596965024104.0176,
-          "date": "2020-08-09T09:47:56.064Z"
-        },
-        {
-          "file": "img/images/Laptop.png",
-          "mtimeMs": 1596965021992.6887,
-          "date": "2020-08-09T09:47:56.927Z"
+          "mtimeMs": 1597040317429.0151,
+          "date": "2020-08-10T06:19:36.826Z"
         },
         {
           "file": "img/images/benefits.png",
@@ -256,18 +241,18 @@
         },
         {
           "file": "img/images/logo.png",
-          "mtimeMs": 1596965022446.489,
-          "date": "2020-08-09T09:47:58.740Z"
+          "mtimeMs": 1597040327306.6323,
+          "date": "2020-08-10T06:19:37.824Z"
         },
         {
           "file": "img/images/nikolay-main.png",
-          "mtimeMs": 1596965022447.4895,
-          "date": "2020-08-09T09:48:00.263Z"
+          "mtimeMs": 1597040331853.6685,
+          "date": "2020-08-10T06:19:38.232Z"
         },
         {
           "file": "img/images/nikolay.png",
-          "mtimeMs": 1596965154468.0657,
-          "date": "2020-08-09T09:48:01.621Z"
+          "mtimeMs": 1597040334625.849,
+          "date": "2020-08-10T06:19:38.670Z"
         },
         {
           "file": "js/scripts.min.js",
@@ -283,6 +268,11 @@
           "file": "favicon.png",
           "mtimeMs": 1585921575154.585,
           "date": "2020-08-09T09:48:44.194Z"
+        },
+        {
+          "file": "img/images/laptop.png",
+          "mtimeMs": 1597040361661.799,
+          "date": "2020-08-10T06:19:37.512Z"
         }
       ]
     },
@@ -1134,6 +1124,141 @@
         "file": "_app/styl/styles.min.styl",
         "config": {
           "customOutput": "css\\styles.min.css"
+        }
+      },
+      {
+        "file": "img/backs/about-bg.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 78816,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/backs/footer.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 66237,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/backs/for-bg.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 794908,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/backs/for.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 27700,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/backs/main.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 240607,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/backs/modal-bg.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 51356,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/icons/about-1.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 23309,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/icons/about-2.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 33314,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/icons/calendar.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 774,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/icons/envelope.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 683,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/icons/gps.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 894,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/icons/tube.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 828,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/images/benefits.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 239575
+        }
+      },
+      {
+        "file": "img/images/laptop.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 69064,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/images/logo.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 11744,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/images/nikolay-main.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 432884,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/images/nikolay.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 361537,
+          "optimized": true
         }
       }
     ]
