Main page is typese

--- a/prepros.config
+++ b/prepros.config
@@ -91,13 +91,13 @@
       "history": [
         {
           "file": "index.html",
-          "mtimeMs": 1597040240935.1685,
-          "date": "2020-08-10T06:19:31.217Z"
+          "mtimeMs": 1597043675323.1963,
+          "date": "2020-08-10T07:17:05.422Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1597040233825.8198,
-          "date": "2020-08-10T06:19:31.625Z"
+          "mtimeMs": 1597043812437.825,
+          "date": "2020-08-10T07:17:05.745Z"
         },
         {
           "file": "fonts/GilroyBlack.eot",
@@ -256,8 +256,8 @@
         },
         {
           "file": "js/scripts.min.js",
-          "mtimeMs": 1521798135995.4568,
-          "date": "2020-08-09T09:48:02.161Z"
+          "mtimeMs": 1597043793244.2712,
+          "date": "2020-08-10T07:17:06.136Z"
         },
         {
           "file": "favicon.ico",
@@ -273,6 +273,11 @@
           "file": "img/images/laptop.png",
           "mtimeMs": 1597040361661.799,
           "date": "2020-08-10T06:19:37.512Z"
+        },
+        {
+          "file": "img/images/rev.png",
+          "mtimeMs": 1597043530587.7305,
+          "date": "2020-08-10T07:13:41.357Z"
         }
       ]
     },
