Main page is stylezed

--- a/prepros.config
+++ b/prepros.config
@@ -91,13 +91,13 @@
       "history": [
         {
           "file": "index.html",
-          "mtimeMs": 1597043675323.1963,
-          "date": "2020-08-10T07:17:05.422Z"
+          "mtimeMs": 1597213192912.336,
+          "date": "2020-08-12T06:23:59.197Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1597043812437.825,
-          "date": "2020-08-10T07:17:05.745Z"
+          "mtimeMs": 1597214200684.271,
+          "date": "2020-08-12T06:36:52.855Z"
         },
         {
           "file": "fonts/GilroyBlack.eot",
@@ -175,44 +175,19 @@
           "date": "2020-08-09T09:47:45.629Z"
         },
         {
-          "file": "img/backs/about-bg.png",
-          "mtimeMs": 1597040283742.7686,
-          "date": "2020-08-10T06:19:32.881Z"
-        },
-        {
           "file": "img/backs/footer.png",
           "mtimeMs": 1597040286853.4077,
           "date": "2020-08-10T06:19:33.262Z"
         },
         {
-          "file": "img/backs/for-bg.png",
-          "mtimeMs": 1597040290132.7678,
-          "date": "2020-08-10T06:19:33.696Z"
-        },
-        {
           "file": "img/backs/for.png",
-          "mtimeMs": 1597040291982.3538,
-          "date": "2020-08-10T06:19:34.040Z"
+          "mtimeMs": 1597040290132.7678,
+          "date": "2020-08-12T05:55:45.031Z"
         },
         {
           "file": "img/backs/main.png",
           "mtimeMs": 1597040296731.0862,
           "date": "2020-08-10T06:19:34.471Z"
-        },
-        {
-          "file": "img/backs/modal-bg.png",
-          "mtimeMs": 1597040298524.3904,
-          "date": "2020-08-10T06:19:34.865Z"
-        },
-        {
-          "file": "img/icons/about-1.png",
-          "mtimeMs": 1597040302731.2285,
-          "date": "2020-08-10T06:19:35.196Z"
-        },
-        {
-          "file": "img/icons/about-2.png",
-          "mtimeMs": 1597040305627.1382,
-          "date": "2020-08-10T06:19:35.528Z"
         },
         {
           "file": "img/icons/calendar.png",
@@ -256,8 +231,8 @@
         },
         {
           "file": "js/scripts.min.js",
-          "mtimeMs": 1597043793244.2712,
-          "date": "2020-08-10T07:17:06.136Z"
+          "mtimeMs": 1597207786273.105,
+          "date": "2020-08-12T04:59:13.219Z"
         },
         {
           "file": "favicon.ico",
@@ -278,6 +253,36 @@
           "file": "img/images/rev.png",
           "mtimeMs": 1597043530587.7305,
           "date": "2020-08-10T07:13:41.357Z"
+        },
+        {
+          "file": "img/backs/benefits-1.png",
+          "mtimeMs": 1597211701670.2864,
+          "date": "2020-08-12T05:55:43.469Z"
+        },
+        {
+          "file": "img/backs/benefits-2.png",
+          "mtimeMs": 1597211704855.2705,
+          "date": "2020-08-12T05:55:43.841Z"
+        },
+        {
+          "file": "img/backs/for-item.png",
+          "mtimeMs": 1597211709253.4216,
+          "date": "2020-08-12T05:55:44.557Z"
+        },
+        {
+          "file": "img/icons/benefit-1.png",
+          "mtimeMs": 1597211718227.0818,
+          "date": "2020-08-12T05:55:46.080Z"
+        },
+        {
+          "file": "img/icons/benefit-2.png",
+          "mtimeMs": 1597211720844.6648,
+          "date": "2020-08-12T05:55:46.416Z"
+        },
+        {
+          "file": "img/backs/modal.png",
+          "mtimeMs": 1597040298524.3904,
+          "date": "2020-08-12T06:36:53.575Z"
         }
       ]
     },
@@ -1140,6 +1145,22 @@
         }
       },
       {
+        "file": "img/backs/benefits-1.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 74563,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/backs/benefits-2.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 19301,
+          "optimized": true
+        }
+      },
+      {
         "file": "img/backs/footer.png",
         "config": {
           "preserveOriginal": false,
@@ -1152,6 +1173,14 @@
         "config": {
           "preserveOriginal": false,
           "originalSize": 794908,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/backs/for-item.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 11623,
           "optimized": true
         }
       },
@@ -1192,6 +1221,22 @@
         "config": {
           "preserveOriginal": false,
           "originalSize": 33314,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/icons/benefit-1.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 8272,
+          "optimized": true
+        }
+      },
+      {
+        "file": "img/icons/benefit-2.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 10575,
           "optimized": true
         }
       },
@@ -1264,6 +1309,13 @@
           "preserveOriginal": false,
           "originalSize": 361537,
           "optimized": true
+        }
+      },
+      {
+        "file": "img/images/rev.png",
+        "config": {
+          "preserveOriginal": false,
+          "originalSize": 147667
         }
       }
     ]
