Thanks page is typeseted and stylezed

--- a/prepros.config
+++ b/prepros.config
@@ -91,13 +91,13 @@
       "history": [
         {
           "file": "index.html",
-          "mtimeMs": 1597213192912.336,
-          "date": "2020-08-12T06:23:59.197Z"
+          "mtimeMs": 1597390789721.9834,
+          "date": "2020-08-14T07:41:21.634Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1597214940310.417,
-          "date": "2020-08-12T06:49:10.304Z"
+          "mtimeMs": 1597390873925.1665,
+          "date": "2020-08-14T07:41:21.951Z"
         },
         {
           "file": "fonts/GilroyBlack.eot",
@@ -283,6 +283,36 @@
           "file": "img/backs/modal.png",
           "mtimeMs": 1597040298524.3904,
           "date": "2020-08-12T06:36:53.575Z"
+        },
+        {
+          "file": "css/thanks.min.css",
+          "mtimeMs": 1597392301161.0415,
+          "date": "2020-08-14T08:05:05.724Z"
+        },
+        {
+          "file": "img/icons/gmail.png",
+          "mtimeMs": 1583560688781.459,
+          "date": "2020-08-14T08:03:22.988Z"
+        },
+        {
+          "file": "img/icons/mailru.png",
+          "mtimeMs": 1583560692773.1108,
+          "date": "2020-08-14T08:03:23.293Z"
+        },
+        {
+          "file": "img/icons/rambler.png",
+          "mtimeMs": 1583560696989.911,
+          "date": "2020-08-14T08:03:23.568Z"
+        },
+        {
+          "file": "img/icons/yandex.png",
+          "mtimeMs": 1583560706978.5457,
+          "date": "2020-08-14T08:03:23.836Z"
+        },
+        {
+          "file": "thanks/index.html",
+          "mtimeMs": 1597392091937.1555,
+          "date": "2020-08-14T08:03:24.086Z"
         }
       ]
     },
@@ -1134,6 +1164,18 @@
         "file": "_app/styl/styles.min.styl",
         "config": {
           "customOutput": "css\\styles.min.css"
+        }
+      },
+      {
+        "file": "_app/styl/thanks.min.styl",
+        "config": {
+          "customOutput": "css\\thanks.min.css"
+        }
+      },
+      {
+        "file": "_app/thanks.pug",
+        "config": {
+          "customOutput": "thanks\\index.html"
         }
       },
       {
